kubernetes/metrics-exporter-service.yaml
## Copyright (c) 2021, 2023, Oracle and/or its affiliates.
## Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
apiVersion: v1
kind: Service
metadata:
  name: metrics-exporter-svc
  namespace: exporter
  labels:
    app: metrics-exporter
    release: stable
spec:
  type: ClusterIP
  ports:
    - port: 9161
      name: metrics
      targetPort: 9161
  selector:
    app: metrics-exporter
