kubernetes/metrics-exporter-network-policy.yaml
## Copyright (c) 2026, Oracle and/or its affiliates.
## Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metrics-exporter-ingress
  namespace: exporter
spec:
  podSelector:
    matchLabels:
      app: metrics-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 9161
